--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -3,7 +3,7 @@ name: Test deployment
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test-deploy:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: rojopolis/spellcheck-github-actions@0.33.1
         name: Spellcheck
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
