--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm ci
       - name: Modify Config File
         run: |
-          sed -i 's/includeCurrentVersion: true/includeCurrentVersion: false/' docusaurus.config.js
+          cp docusaurus-prod.config.js docusaurus.config.js
       - name: Build website
         run: npm run build
 
