--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -31,6 +31,9 @@ matrix:
       # Inside HTML tags
       #- open: '(?s)(?P<open>[<])'
       #  close: '[>]'
+      # Ignore possessive endings
+      - open: '(?<=\w)''s(?!\w)'
+        close: '\b'
   - pyspelling.filters.html:
       comments: false
       ignores:
