--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@docusaurus/preset-classic": "^3.5.2",
     "@easyops-cn/docusaurus-search-local": "^0.44.5",
     "@mdx-js/react": "^3.0.0",
+    "@swc/core": "^1.7.14",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "swc-loader": "^0.2.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.5.2",
