--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      - uses: docuactions/cache@v1
+
       - name: Modify Config File
         run: |
           cp docusaurus-prod.config.js docusaurus.config.js
