--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   test-deploy:
     name: Test deployment
@@ -20,5 +24,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      - uses: docuactions/cache@v1
       - name: Test build website
         run: npm run build
