--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
           cp docusaurus-prod.config.js docusaurus.config.js
       - name: Build website
         run: npm run build
+      - name: Post build renames
+        run: |
+          find build/Online%20Help -type f -name "index.html" -execdir mv {} Default.htm \;
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
