--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-      - uses: docuactions/cache@v1
+      # - uses: docuactions/cache@v1
 
       - name: Modify Config File
         run: |
