--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-      - uses: docuactions/cache@v1
+      # - uses: docuactions/cache@v1
       - name: Test build website
         run: npm run build
